Centered button Offset lables left Fixed autofill not being detected Fixed z-index on country list Removed phone-help

--- a/_includes/styles/transparent.scss
+++ b/_includes/styles/transparent.scss
@@ -76,6 +76,7 @@
     }
     label.error{
       color: lighten($error-color, 10%);
+      padding-left: 20px;
     }
   }
 
@@ -104,6 +105,9 @@
         border-right:1px solid #b4b4b4;
         padding: 10px;
       }
+      .iti-container{
+        z-index: 12000000;
+      }
     }
   }
 
@@ -111,6 +115,7 @@
     position: relative;
     width: 250px;
     height: $inputHeight;
+    margin: 0 auto;
     button[type="submit"]{
       -webkit-appearance: none;
       background-color: #2cc16f;
